fixed issues with mobile sidebar overlapping viewport

--- a/src/css/scss/navbar.scss
+++ b/src/css/scss/navbar.scss
@@ -5,6 +5,9 @@
         .bg-dim {
           width: 100%;
           height: 125%;
+          @media only screen and (max-height: 375px) {
+            height: 190%;
+          }
           transition: all 0.3s ease;
         }
       }
@@ -12,6 +15,9 @@
         @media only screen and (max-width: 767px) {
           width: 70%;
           height: 125%;
+          @media only screen and (max-height: 375px) {
+            height: 190%;
+          }
           right: -50%;
           opacity: 0;
           transition: all 0.2s ease;
